--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".IntroActivity" >
             <intent-filter>
@@ -24,6 +23,8 @@
             android:name=".CreditActivity"
             android:label="@string/title_activity_credit"
             android:theme="@style/AppTheme" >
+        </activity>
+        <activity android:name=".JoinActivity" >
         </activity>
     </application>
 
